--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -30,7 +30,7 @@
     <div class="container with-bottom-nav" style="min-height: 667px;">
       <div class="content">
         <!-- <div class="js-image-swiper custom-image-swiper  custom-image-swiper-single" data-images="1"> -->
-          <swipe :lists="bannerLists" v-if="bannerLists" name="swipe.vue"></swipe>
+        <swipe :lists="bannerLists" v-if="bannerLists" name="swipe.vue"></swipe>
         <!-- </div> -->
         <!-- <a href="https://maijia.youzan.com/mars/notice/detail?id=" class="notice"></a> -->
         <div class="section-title">优店推荐</div>
@@ -63,24 +63,20 @@
           </div>
         </div>
         <div class="hot-goods js-waterfull-wrap" data-src="">
-          <ul class="js-list js-lazy" data-src=""
-            v-infinite-scroll="getLists"
-            infinite-scroll-disabled="loading"
-            infinite-scroll-distance="10"
-          >
-              <li v-for="list in lists" :key="list.id">
-                  <div class="goods-item">
-                    <a href="https://h5.youzan.com/v2/showcase/goods?alias=2fwig6rnqfq6m&amp;source=yzapp&amp;f_platform=yzapp">
-                      <div class="thumb img-box">
-                        <img class="fadeIn" v-bind:src="list.img">
-                      </div>
-                      <div class="detail">
-                        <div class="title">{{list.name}}</div>
-                        <div class="price">￥{{list.price}}</div>
-                      </div>
-                    </a>
+          <ul class="js-list js-lazy" data-src="" v-infinite-scroll="getLists" infinite-scroll-disabled="loading" infinite-scroll-distance="10">
+            <li v-for="list in lists" :key="list.id">
+              <div class="goods-item">
+                <a :href="'goods.html?id='+list.id">
+                  <div class="thumb img-box">
+                    <img class="fadeIn" v-bind:src="list.img">
                   </div>
-                </li>
+                  <div class="detail">
+                    <div class="title">{{list.name}}</div>
+                    <div class="price">￥{{list.price}}</div>
+                  </div>
+                </a>
+              </div>
+            </li>
           </ul>
           <div class="loading-more" v-show="loading">
             <span></span>
@@ -90,7 +86,7 @@
       </div>
       <foot></foot>
     </div>
-   
+
   </div>
 </body>
 
