--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -17,6 +17,7 @@
     [v-cloak] {
       display: none;
     }
+
   </style>
 </head>
 
@@ -29,25 +30,25 @@
             <div class="block block-order block-cart" v-for="(shop,shopIndex) in lists">
               <div class="header">
                 <div class="select-group js-select-group" @click="selectShop(shop)">
-                  <span class="check" :class="{checked: shop.checked}"></span>
+                  <span class="check" :class="{checked: shop.checked}" v-show="!editingShop"></span>
+                  <span class="check" :class="{checked: shop.removeChecked}" v-show="editingShop"></span>
                 </div>
                 <a class="shop-title">
                   <i class="custom-store-img">店铺：</i>{{shop.shopTitle}}</a>
-                <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list"
-                @click="edit(shop,shopIndex)"
-                >
+                <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list" @click="edit(shop,shopIndex)">
                   {{shop.editingMsg}}
                 </a>
               </div>
               <!---->
               <div>
                 <ul class="js-list block block-list block-list-cart border-0">
-                  <li class="block-item block-item-cart" v-for="(good,goodIndex) in shop.goodsList"
-                  :class="{editing: shop.editing}"
+                  <li class="block-item block-item-cart" v-for="(good,goodIndex) in shop.goodsList" :class="{editing: shop.editing}"
+                  @touchstart="start($event,good)" @touchend="end($event,shopIndex,good,goodIndex)"
+                  :ref="'goods-'+shopIndex+'-'+goodIndex"
                   >
                     <div>
                       <div class="check-container" @click="selectGood(shop,good)">
-                        <span class="check" :class="{checked: good.checked}"></span>
+                        <span class="check" :class="{checked: editingShop?good.removeChecked:good.checked}"></span>
                       </div>
                       <div class="name-card clearfix">
                         <a :href="'goods.html?id='+good.id" class="thumb js-goods-link">
@@ -72,11 +73,11 @@
                           <div class="num" v-show="shop.editing">
                             <!---->
                             <div class="quantity">
-                              <button type="button" class="minus disabled"></button>
+                              <button type="button" class="minus" :class="{disabled: good.number === 1}"></button>
                               <input type="text" pattern="[0-9]*" class="txt" v-model="good.number">
                               <button type="button" class="plus "></button>
-                              <div class="response-area response-area-minus"></div>
-                              <div class="response-area response-area-plus"></div>
+                              <div class="response-area response-area-minus" @click="reduce(good)"></div>
+                              <div class="response-area response-area-plus" @click="add(good)"></div>
                             </div>
                           </div>
                           <div class="price c-orange">
@@ -86,7 +87,7 @@
                         </div>
                         <div class="error-box"></div>
                       </div>
-                      <div class="delete-btn">
+                      <div class="delete-btn" @click="remove(shop,shopIndex,good,goodIndex)">
                         <span>删除</span>
                       </div>
                     </div>
@@ -147,7 +148,7 @@
             </div>
             <div class="bottom-cart clear-fix">
               <div class="select-all" @click="selectAll()">
-                <span class="check" :class="{checked: allSelected}"></span> 全选
+                <span class="check" :class="{checked: editingShop? allRemoveSelected: allSelected}"></span> 全选
               </div>
               <!-- 显示状态 -->
               <div class="total-price" v-show="!editingShop">
@@ -155,14 +156,12 @@
                 <span class="js-total-price" style="color: rgb(255, 102, 0);">{{total | currency}}</span>
                 <p class="c-gray-dark">不含运费</p>
               </div>
-              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" :disabled="!selectLists.length"
-              v-show="!editingShop"
-              >
-                结算 (3)
+              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" :disabled="!selectLists.length" v-show="!editingShop">
+                结算
               </button>
               <!-- 编辑状态 -->
-              <button href="javascript:;" disabled="disabled" class="j-delete-goods btn font-size-14 btn-red"
-                v-show="editingShop"
+              <button href="javascript:;" :disabled="!removeLists.length" class="j-delete-goods btn font-size-14 btn-red" v-show="editingShop"
+              @click="remove()"
               >删除
               </button>
             </div>
