--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="js-show-find category-guid" style="display: none;"></div>
       </div>
-      <foot></foot>
+      <foot :obj="obj" @change="changeAge"></foot>
     </div>
 
   </div>
